feat: add and refactor more labs

--- a/lab_010.html
+++ b/lab_010.html
@@ -63,7 +63,7 @@
 (out) (use "git rm --cached &ltfile&gt..." to unstage)
 (out)        new file:   README.md
 (out)</code></pre>
-      <p class="note">When you create new files, you should track them as soon as possible.</p>
+      <p class="note"><strong>Note:</strong> When you create new files, you should track them as soon as possible.</p>
       <p>If you remember Lab 7, the file is now added to the staging area. From there, the next step is...</p>
       <h2>Commit File to Repository</h2>
       <p>To save the state of this file, we'll commit it to our <code>Git</code> repository! Every commit also
@@ -76,7 +76,7 @@
 (out) 1 file changed, 0 insertions(+), 0 deletions(-)
 (out) create mode 100644 README.md
 (out)</code></pre>
-      <p class="note">We will be using conventional commits. The format is <em>&ltfeat or fix&gt: &ltcommit message under 50 words&gt</em>.
+      <p class="note"><strong>Note:</strong> We will be using conventional commits. The format is <em>&ltfeat or fix&gt: &ltcommit message under 50 words&gt</em>.
       Commit messages should be clear and concise in the present tense.</p>
       <h2>Status Check</h2>
       <h3><b>Execute</b></h3>
