--- a/lab_011.html
+++ b/lab_011.html
@@ -54,7 +54,7 @@
 This is a personal website built using the Hack4Impact Starter Pack!
 &ltYou can add any description you want here.&gt
 [Visit it here](<github username>.github.io)!</code></pre>
-        <p class="note"><code>.md</code> files use markdown. It allows you to put formatting like <i>italics</i> or
+        <p class="note"><strong>Note:</strong> <code>.md</code> files use markdown. It allows you to put formatting like <i>italics</i> or
         <strong>bold</strong> with just text. You might've seen markdown in Discord! </p>
       <h2>Check the Status</h2>
       Now check the status of the working directory.
