--- a/lab_017.html
+++ b/lab_017.html
@@ -49,13 +49,13 @@
       <h2>Your Website Title</h2>
       <p>If you look at your website in your browser, you might notice that your tab just says <code>index.html</code>
         or the file path. That doesn't look very nice so let's change that.</p>
-      <img class="image" src="assets/notitle.png" alt="Image showing a webpage without the title tag">
+      <img class="image" src="assets/0401.png" alt="Image showing a webpage without the title tag">
       <p>In your <code class="language-html">&lt;head&gt;</code>, add a <code
           class="language-html">&lt;title&gt;</code>. Then, between the opening and closing tags of the <code
           class="language-html">&lt;title&gt;</code>, give your website a title. It can be anything!</p>
       <p>Now when you refresh your webpage, you should see that your website's tab has a title. If you save your webpage
         as a bookmark, this will also be the name of your bookmark! The page below has the title "Personal Website".</p>
-      <img class="image" src="assets/title.png" alt="Image showing a webpage with the title tag">
+      <img class="image" src="assets/0402.png" alt="Image showing a webpage with the title tag">
       <h2>Update Pages</h2>
       <p>Let's set up your other HTML documents, just like you did for <code>index.html</code>. For each of the other
         HTML documents, add the following:</p>
@@ -72,7 +72,7 @@
         </li>
         <li>Add some text to each <code class="language-html">&lt;main&gt;</code> on each page</li>
       </ul>
-      <p class="note">If you need help, refer to the previous labs or ask on GitHub Discussions! Remember to stage and
+      <p class="note"><strong>Note:</strong> If you need help, refer to the previous labs or ask on GitHub Discussions! Remember to stage and
         commit your changes often along the way! </p>
 
 
