--- a/lab_019.html
+++ b/lab_019.html
@@ -47,12 +47,33 @@
             class="language-html">&lt;div&gt;</code></li>
         <li>Add <code class="language-html">&lt;div&gt;</code>s to your personal website</li>
       </ul>
-      <h2>Generics</h2>
+      <h2>Generics Containers</h2>
       <p><code class="language-html">&lt;span&gt;</code> and <code class="language-html">&lt;div&gt;</code> are generic
         containers for content that don't have any semantic meaning to them. Although, we will continue to stress the
-        importance of writing HTML that provides meaning and structure to a page, <em>sometimes</em> we need a catch-all, 
+        importance of writing HTML that provides meaning and structure to a page, <em>sometimes</em> we need a
+        catch-all,
         generic solution for content that is not easily categorizable into one of the existing HTML tags.</p>
-      <p>Often times, you will attach a class</p>
+      <p>Often, you will attach a <strong>class attribute</strong> or <strong>id attribute</strong> to the <code
+          class="language-html">&lt;span&gt;</code> or <code class="language-html">&lt;div&gt;</code>. If you remember
+        from Lab 16, this is so we can reference specific attributes in our CSS and select those specific classes or ids
+        for styling.</p>
+      <h2>Add a Div</h2>
+      <p>Let's add a <code class="language-html">&lt;div&gt;</code> to your personal website. In your
+        <code>index.html</code> file, let's wrap all of your paragraphs in a <code
+          class="language-html">&lt;div&gt;</code>. Let's give this <code class="language-html">&lt;div&gt;</code> the
+        class attribute of <code class="language-html">&lt;div class="about"&gt;</code>.
+      </p>
+      <p>It'll look something, but not exactly, like the following:</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-src="prism/html/1901.html" data-line="10,25"></pre>
+      <p class="note"><strong>Note:</strong> The heading on Line 9 stays outside the <code
+          class="language-html">&lt;div&gt;</code>. Don't forget the class attribute and attribute value on Line 10!</p>
+      <h2>Add More!</h2>
+      <p>Update the other pages of your website with the new things we've learned about.</p>
+      <ul>
+        <li>Add a <code class="language-html">&lt;h1&gt;</code> heading at the top, inside <code
+            class="language-html">&lt;main&gt;</code> on every page</li>
+      </ul>
 
     </div>
   </main>
