--- a/lab_02.html
+++ b/lab_02.html
@@ -68,7 +68,7 @@
       <ul>
         <li>4gb or more</li>
       </ul>
-      <p class="note">If you have trouble accessing a computer, you can reserve a laptop from <a
+      <p class="note"><strong>Note:</strong> If you have trouble accessing a computer, you can reserve a laptop from <a
           href="https://tech.calpoly.edu/services/tech-rentals" target="_blank" rel="noopener">Cal Poly Tech
           Rentals</a>!
       </p>
