--- a/lab_03.html
+++ b/lab_03.html
@@ -53,7 +53,7 @@
         now!
       </p>
       <video controls class="video">
-        <source src="assets/github.mp4" type="video/mp4">
+        <source src="assets/0301.mp4" type="video/mp4">
       </video>
       <ol>
         <li>Go to the Github homepage: <a href="https://github.com/">https://github.com/</a></li>
@@ -67,9 +67,9 @@
         or on the home page.</p>
       <p>Once on the page, make yourself known! Make an introduction in the pinned Introductions thread!</p>
       <video controls class="video">
-        <source src="assets/discussions.mp4" type="video/mp4">
+        <source src="assets/0302.mp4" type="video/mp4">
       </video>
-      <p class="note">If you ever need help, make sure to look through the Q&A discussions for others with similar
+      <p class="note"><strong>Note:</strong> If you ever need help, make sure to look through the Q&A discussions for others with similar
         issues or questions. If there are no answers, create a discussion and ask for help!</p>
 
     </div>
