--- a/lab_04.html
+++ b/lab_04.html
@@ -63,7 +63,7 @@
         or you can use Prettier. Prettier is standard for formatting a variety of web development languages. For the
         purposes of the Starter Pack, we will need it to format <code>HTML</code> and <code>CSS</code>.</p>
       <video controls class="video">
-        <source src="assets/prettier.mp4" type="video/mp4">
+        <source src="assets/0401.mp4" type="video/mp4">
       </video>
       <ol>
         <li>Hover over the icons on the left-hand side. Click the <strong>Marketplace</strong> icon.</li>
