--- a/lab_05.html
+++ b/lab_05.html
@@ -54,7 +54,7 @@
         software developer.
       </p>
       <p>Windows users will use Powershell. Unix/Mac users will use Terminal.</p>
-      <p class="note">Git is a system and tool for managing code. GitHub is a proprietary platform and interface for
+      <p class="note"><strong>Note:</strong> Git is a system and tool for managing code. GitHub is a proprietary platform and interface for
         hosting
         projects that use Git. Although used together, they are not owned together.</p>
       <p>Check if you already have <code>Git</code> installed. Open your CLI (Powershell for Windows. Terminal for
@@ -72,7 +72,7 @@
       <h3><b>Execute</b></h3>
       <pre class="command-line" data-prompt="$"><code class="language-git">git config --global user.name "Your Name"</code></pre>
       <pre class="command-line" data-prompt="$"><code class="language-git">git config --global user.email "your_email@whatever.com"</code></pre>
-      <p class="note">We recommend you use the same name and email as your GitHub account.</p>
+      <p class="note"><strong>Note:</strong> We recommend you use the same name and email as your GitHub account.</p>
       <h2>Setup Line Ending Preferences</h2>
       <p>For Unix/Mac users:</p>
       <h3><b>Execute:</b></h3>
