--- a/lab_06.html
+++ b/lab_06.html
@@ -50,7 +50,7 @@
         keep track of changes to our source code. This allows us to compare changes to code over time, revert to older
         versions of code easily, experiment or iterate safely without fear of critical errors, and, when collaborating,
         know who made what changes.</p>
-      <p class="note">Version control is also known as source control or source code management.</p>
+      <p class="note"><strong>Note:</strong> Version control is also known as source control or source code management.</p>
       <h2>Local Version Control</h2>
       <p>If you have ever saved a copy of a file before making changes, you've used a local version control
         system. Keeping track of files this way is simple, but very error prone. Early local VCSs instead kept a
@@ -89,7 +89,7 @@ I love Hack4Impact!</pre>
       <pre class="file"><del>I am doing the Starter Pack!</del>
 <ins>I am done with the Starter Pack!</ins>
 I <del>like</del><ins>love</ins> Hack4Impact!</pre>
-      <p class="note">What are some easy errors that could happen if your local version control system was copying files
+      <p class="note"><strong>Question:</strong> What are some easy errors that could happen if your local version control system was copying files
         as backups?</p>
       <h2>Centralized Version Control</h2>
       <p>But what good is local version control if you want to collaborate with other developers? Enter, a centralized
@@ -125,7 +125,7 @@ I <del>like</del><ins>love</ins> Hack4Impact!</pre>
         classDef clusters font-family:monospace,font-size:14px
         classDef cluster rx:5px,ry:5px
       </pre>
-      <p class="note">What is the major risk of using a centralized version control system?</p>
+      <p class="note"><strong>Question:</strong> What is the major risk of using a centralized version control system?</p>
       <h2>Distributed Version Control</h2>
       <p>Hence, the distributed version control system (DVCS). In a DVCS, every developer <em>clones</em> the entire
         repository
@@ -176,7 +176,7 @@ I <del>like</del><ins>love</ins> Hack4Impact!</pre>
               classDef clusters font-family:monospace,font-size:14px
               classDef cluster rx:5px,ry:5px
       </pre>
-      <p class="note">Think of some advantages and disadvantages of using a distributed version control system.</p>
+      <p class="note"><strong>Question:</strong> Think of some advantages and disadvantages of using a distributed version control system.</p>
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
