--- a/lab_07.html
+++ b/lab_07.html
@@ -109,7 +109,7 @@
         classDef versions fill:#f6f9ff,stroke:#cfdbf3
         class v1,v2,v3,v4,v5 versions
         classDef node font-family:monospace,font-size:14px</pre>
-      <p class="note">What are the advantages and disadvantages of Delta-based version control versus <code>Git</code>'s
+      <p class="note"><strong>Question:</strong> What are the advantages and disadvantages of Delta-based version control versus <code>Git</code>'s
         version control?</p>
       <h2>A Bit More Git</h2>
       <p>There are a few more things to keep in mind as you use <code>Git</code>.</p>
