--- a/lab_08.html
+++ b/lab_08.html
@@ -70,7 +70,7 @@
       </ol>
       <h2>Create a File</h2>
       <p>This will be start of your personal website! We'll go over the details of HTML and CSS later, but for now let's
-        create the main HTML file of your website.</p>
+        create a file to hold some information about your website.</p>
       <video controls class="video">
         <source src="assets/file.mp4" type="video/mp4">
       </video>
@@ -84,7 +84,7 @@
         <li>Name your new file <code>README.md</code>, create it, and save it to your open folder. If it's not open,
         click the file in the Explorer to open it.</li>
       </ol>
-      <p class="note">This is a markdown file which will let us write formatted text.</p>
+      <p class="note"><strong>Note:</strong> This is a markdown file which will let us write formatted text.</p>
       <h2>Create the Repository</h2>
 
       <p>So far, all we've done is make a file in a folder on our system. We haven't really used any version control so
@@ -98,7 +98,7 @@
       <h3><b>Output</b></h3>
       <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
 (out)Initialized empty Git repository in Users/khoaly/khoa-l.github.io/.git/</code></pre>
-      <p class="note">Based on Labs 6 and 7, what do you think the .git file created when you initialize the repository is?</p>
+      <p class="note"><strong>Question:</strong> Based on Labs 6 and 7, what do you think the .git file created when you initialize the repository is?</p>
 
 
     </div>
