--- a/lab_013.html
+++ b/lab_013.html
@@ -63,7 +63,7 @@ git commit -m "feat: change file-a and file-b"</code></pre>
       <h3><b>Execute</b></h3>
       <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git add file-c
 git commit -m "feat: change file-c"</code></pre>
-      <p class="note">Too many commits is better than too few, but a good rule of thumb for when to commit is whenever
+      <p class="note"><strong>Note:</strong> Too many commits is better than too few, but a good rule of thumb for when to commit is whenever
         the feature or task you are working on changes.</p>
 
 
