--- a/lab_016.html
+++ b/lab_016.html
@@ -57,19 +57,19 @@
       <p><em>Tags</em> are the building blocks of all web applications. They surround content and give it meaning and
         provide context. Let's add a few to your website. Make sure your document looks like the following:</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-src="prism/html/basic-1.html"></pre>
+      <pre class="file line-numbers" data-src="prism/html/1601.html"></pre>
       <p>At the very top of all HTML documents is a <strong>document type declaration</strong>. This tells your web
         browser what version of HTML you're using. Always include this or your browser will have no idea how to
         interpret your HTML document.</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-line="1" data-src="prism/html/basic-1.html"></pre>
+      <pre class="file line-numbers" data-line="1" data-src="prism/html/1601.html"></pre>
       <p>Following that, everything is wrapped in the <code class="language-html">&lt;html&gt;</code> <strong>opening
           tag</strong> and the <code class="language-html">&lt;/html&gt;</code> <strong>closing tag</strong>. Everything
         we put in between is an HTML document. The main content of the page goes between the <code
           class="language-html">&lt;body&gt;</code> and <code class="language-html">&lt;/body&gt;</code> tags.
       </p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-line="2-3,5-6" data-src="prism/html/basic-1.html"></pre>
+      <pre class="file line-numbers" data-line="2-3,5-6" data-src="prism/html/1601.html"></pre>
       <p>Most tags will look like the <code class="language-html">&lt;html&gt;</code> and <code
           class="language-html">&lt;body&gt;</code> tags do with an opening and closing tag. Usually, content can be put
         in between the tags. We'll be going over some of the most common and useful tags, but there are so many tags
@@ -77,7 +77,7 @@
       <p>If you want to explore the tags, we suggest going to the official documentation for HTML! <a
           href="https://developer.mozilla.org/en-US/docs/Web/HTML">https://developer.mozilla.org/en-US/docs/Web/HTML</a>
       </p>
-      <p class="note">Now would be a good time to stage and commit your changes as we're about to go into a new topic!
+      <p class="note"><strong>Note:</strong> Now would be a good time to stage and commit your changes as we're about to go into a new topic!
       </p>
       <h2>Structure, not Style</h2>
       <p>If you open your browser now and refresh your HTML page, you'll see that nothing has changed. This is because
@@ -85,7 +85,7 @@
         Right-click the
         site and <strong>Inspect</strong> to see the HTML structure you added.</p>
       <video class="video" controls>
-        <source src="assets/tags.mp4" type="">
+        <source src="assets/1601.mp4" type="">
       </video>
       <h2>Heads</h2>
       <p>Let's add some more structure to your website. While the main content of the your page goes inside it's <code
@@ -97,7 +97,7 @@
         determines the title of your website, obvious we know. It can also include meta information for search engines
         to categorize your site with and tags that link your HTML to your CSS styling. For now, add the <code
           class="language-html">&lt;head&gt;</code> tag before the <code class="language-html">&lt;body&gt;</code>.</p>
-      <p class="note">This is above your <code class="language-html">&lt;body&gt;</code> tag, but inside your <code
+      <p class="note"><strong>Note:</strong> This is above your <code class="language-html">&lt;body&gt;</code> tag, but inside your <code
           class="language-html">&lt;html&gt;</code> tag.</p>
       <h2>Nav, Main, and Footer</h2>
       <p>Inside of the <code class="language-html">&lt;body&gt;</code> tag, content can be split up into a few key
@@ -120,7 +120,7 @@
         <li>The <code class="language-html">&lt;footer&gt;</code> tag after the <code
             class="language-html">&lt;main&gt;</code></li>
       </ul>
-      <p class="note">Remember, all these tags have an opening and a closing tag. Also, your <code
+      <p class="note"><strong>Note:</strong> Remember, all these tags have an opening and a closing tag. Also, your <code
           class="language-html">&lt;body&gt;</code> tag should still enclose everything.</p>
       <h2>Attributes</h2>
       <p>Some HTML tags will have what are called <em>attributes</em>. Attributes are extra information you can apply to
