--- a/lab_018.html
+++ b/lab_018.html
@@ -50,22 +50,24 @@
       <h2>Paragraph Structuring</h2>
       <p>In your <code>index.html</code>'s <code class="language-html">&lt;body&gt;</code>, add another line:</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-line="11" data-src="prism/html/basic-2.html"></pre>
+      <pre class="file line-numbers" data-line="11" data-src="prism/html/1801.html"></pre>
       <p>If you go to your webpage in your browser, you'll see that the text you added does not look the same as in your
         code, on two separate lines.</p>
-      <img class="image" src="assets/noparagraph.png" alt="The text added to the page is not on two separate lines.">
+      <img class="image" src="assets/1801.png" alt="The text added to the page is not on two separate lines.">
       <p>This is because web browsers don't usually take into account the way your code looks. Remember, HTML is all
         about meaning, or <strong>semantics</strong>. This means that if you want there to be two separate blocks of
         text, you need to explicitly code it.</p>
       <p>This is where the <code class="language-html">&lt;p&gt;</code> tag comes in. Wrap each line of text in a <code
           class="language-html">&lt;p&gt;</code> tag.</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-src="prism/html/basic-3.html" data-line="10-11"></pre>
+      <pre class="file line-numbers" data-src="prism/html/1802.html" data-line="10-11"></pre>
       <p>In the browser, you can now see that the paragraphs are on two separate lines.</p>
-      <img class="image" src="assets/paragraph.png" alt="The paragraphs added to the page is on two separate lines.">
+      <img class="image" src="assets/1802.png" alt="The paragraphs added to the page is on two separate lines.">
       <p> You can also achieve a line-break using the self-closing <code class="language-html">&lt;br&gt;</code>, or
-        line-break tag, inside of a paragraph tag between text. <em>However</em>, only use this if the ideas in the
-        paragraph are related. Don't use this as a subsitute for using multiple paragraph tags.</p>
+          line-break tag, inside of a paragraph tag between text: 
+        <pre><code class="language-html">&lt;p&gt;some text&lt;br&gt;other text&lt;/p&gt;</code></pre>
+        <p><em>However</em>, only use this if the ideas in the paragraph are related. Don't use this as a subsitute for using
+        multiple paragraph tags.</p>
       <h2>Emphasis and Breaks</h2>
       <p>So far, all we have is plain text, but there are a couple of ways to emphasize and higlight
         important text. You might have noticed some text that have been emphasized throughout this Starter Pack.</p>
@@ -79,8 +81,8 @@
       <p>Get rid of the temporary text in your <code>index.html</code>'s <code class="language-html">&lt;main&gt;</code>
         and instead write an about you! Use paragraphs, emphasis, and strong emphasis where appropriate!
       </p>
-      <img class="image" src="assets/about-me.png" alt="A description or about me about Hack4Impact">
-      <p class="note">This is your reminder to commit! If it's been a while, remember you can separate out the staging
+      <img class="image" src="assets/1803.png" alt="A description or about me about Hack4Impact">
+      <p class="note"><strong>Note:</strong> This is your reminder to commit! If it's been a while, remember you can separate out the staging
         and committing of different files.</p>
       <h2>Headings</h2>
       <p>Continuing with text formatting, we have headings! They're exactly what they sound like. There are 6 different
@@ -90,8 +92,8 @@
           class="language-html">&lt;h6&gt;</code>.</p>
       <p>At the top of your <code class="language-html">&lt;main&gt;</code>, before your <code
           class="language-html">&lt;p&gt;</code> paragraphs, put an <code class="language-html">&lt;h1&gt;</code> tag.
-        Inside, let's put the text "Hello, World!"</p>
-      <img class="image" src="assets/heading.png" alt="A description or about me about Hack4Impact">
+        Inside, give your home page an appropriate heading. We'll put "Hello, World!"</p>
+      <img class="image" src="assets/1804.png" alt="A description or about me about Hack4Impact">
       <p>The <code class="language-html">&lt;h1&gt;</code> headings is only be used once as the main heading of a page.
         The other headings can be used as many times as necessary, but always in order. <code
           class="language-html">&lt;h3&gt;</code> should be a sub-heading of <code
