--- a/lab_018.html
+++ b/lab_018.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 18 - Paragraphs and Headings
+    Lab 18 - Page Titles
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -38,69 +38,44 @@
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
         <em>Lab 18</em>
-        Paragraphs and Headings
+        Page Titles
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about paragraphs and headings in HTML</li>
-        <li>Add a <code class="language-html">&lt;p&gt;</code> to your personal website</li>
-        <li>Add headings to your personal website</li>
+        <li>Add a <code class="language-html">&lt;title&gt;</code> to your personal website</li>
+        <li>Update all your other pages to be similar to include the tags we've learned about</li>
       </ul>
-      <h2>Paragraph Structuring</h2>
-      <p>In your <code>index.html</code>'s <code class="language-html">&lt;body&gt;</code>, add another line:</p>
-      <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-line="11" data-src="prism/html/1801.html"></pre>
-      <p>If you go to your webpage in your browser, you'll see that the text you added does not look the same as in your
-        code, on two separate lines.</p>
-      <img class="image" src="assets/1801.png" alt="The text added to the page is not on two separate lines.">
-      <p>This is because web browsers don't usually take into account the way your code looks. Remember, HTML is all
-        about meaning, or <strong>semantics</strong>. This means that if you want there to be two separate blocks of
-        text, you need to explicitly code it.</p>
-      <p>This is where the <code class="language-html">&lt;p&gt;</code> tag comes in. Wrap each line of text in a <code
-          class="language-html">&lt;p&gt;</code> tag.</p>
-      <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-src="prism/html/1802.html" data-line="10-11"></pre>
-      <p>In the browser, you can now see that the paragraphs are on two separate lines.</p>
-      <img class="image" src="assets/1802.png" alt="The paragraphs added to the page is on two separate lines.">
-      <p> You can also achieve a line-break using the self-closing <code class="language-html">&lt;br&gt;</code>, or
-          line-break tag, inside of a paragraph tag between text: 
-        <pre><code class="language-html">&lt;p&gt;some text&lt;br&gt;other text&lt;/p&gt;</code></pre>
-        <p><em>However</em>, only use this if the ideas in the paragraph are related. Don't use this as a subsitute for using
-        multiple paragraph tags.</p>
-      <h2>Emphasis and Breaks</h2>
-      <p>So far, all we have is plain text, but there are a couple of ways to emphasize and higlight
-        important text. You might have noticed some text that have been emphasized throughout this Starter Pack.</p>
-
-      <p>To do that you can surround text with the <code class="language-html">&lt;em&gt;</code> or the <code
-          class="language-html">&lt;strong&gt;</code> tags. Usually browsers will render the <code
-          class="language-html">&lt;em&gt;</code> as italicized and the <code
-          class="language-html">&lt;strong&gt;</code> tags as bold, but remember that HTML is about semantics or
-        meaning, not appearance. You should use these when you want to <em>emphasize</em> or <strong>strongly
-          emphasize</strong> text, not to make text italicized or bolded.</p>
-      <p>Get rid of the temporary text in your <code>index.html</code>'s <code class="language-html">&lt;main&gt;</code>
-        and instead write an about you! Use paragraphs, emphasis, and strong emphasis where appropriate!
-      </p>
-      <img class="image" src="assets/1803.png" alt="A description or about me about Hack4Impact">
-      <p class="note"><strong>Note:</strong> This is your reminder to commit! If it's been a while, remember you can separate out the staging
-        and committing of different files.</p>
-      <h2>Headings</h2>
-      <p>Continuing with text formatting, we have headings! They're exactly what they sound like. There are 6 different
-        headings with specific emphasis and styles. <code class="language-html">&lt;h1&gt;</code>, <code
-          class="language-html">&lt;h2&gt;</code>, <code class="language-html">&lt;h3&gt;</code>, <code
-          class="language-html">&lt;h4&gt;</code>, <code class="language-html">&lt;h5&gt;</code>, and <code
-          class="language-html">&lt;h6&gt;</code>.</p>
-      <p>At the top of your <code class="language-html">&lt;main&gt;</code>, before your <code
-          class="language-html">&lt;p&gt;</code> paragraphs, put an <code class="language-html">&lt;h1&gt;</code> tag.
-        Inside, give your home page an appropriate heading. We'll put "Hello, World!"</p>
-      <img class="image" src="assets/1804.png" alt="A description or about me about Hack4Impact">
-      <p>The <code class="language-html">&lt;h1&gt;</code> headings is only be used once as the main heading of a page.
-        The other headings can be used as many times as necessary, but always in order. <code
-          class="language-html">&lt;h3&gt;</code> should be a sub-heading of <code
-          class="language-html">&lt;h2&gt;</code> and <code class="language-html">&lt;h6&gt;</code> should be the
-        sub-heading of <code class="language-html">&lt;h5&gt;</code> and so on.</p>
-      <h3 class="file-heading"><em>headings</em></h3>
-      <pre class="file"><h1 class="nostyle">heading 1</h1><h2 class="nostyle">heading 2</h2><h3 class="nostyle">heading 3</h3><h4 class="nostyle">heading 4</h4><h5 class="nostyle">heading 5</h5><h6 class="nostyle">heading 6</h6></pre>
+      <h2>Your Website Title</h2>
+      <p>If you look at your website in your browser, you might notice that your tab just says <code>index.html</code>
+        or the file path. That doesn't look very nice so let's change that.</p>
+      <img class="image" src="assets/0401.png" alt="Image showing a webpage without the title tag">
+      <p>In your <code class="language-html">&lt;head&gt;</code>, add a <code
+          class="language-html">&lt;title&gt;</code>. Then, between the opening and closing tags of the <code
+          class="language-html">&lt;title&gt;</code>, give your website a title. It can be anything!</p>
+      <p>Now when you refresh your webpage, you should see that your website's tab has a title. If you save your webpage
+        as a bookmark, this will also be the name of your bookmark! The page below has the title "Personal Website".</p>
+      <img class="image" src="assets/0402.png" alt="Image showing a webpage with the title tag">
+      <h2>Update Pages</h2>
+      <p>Let's set up your other HTML documents, just like you did for <code>index.html</code>. For each of the other
+        HTML documents, add the following:</p>
+      <ul>
+        <li>A <strong>document type declaration</strong> to the type of each file</li>
+        <li>Add an <code class="language-html">&lt;html&gt;</code> tag to each page</li>
+        <li>Add a <code class="language-html">&lt;head&gt;</code> tag to each page</li>
+        <li>Add a <code class="language-html">&lt;title&gt;</code> in the <code
+            class="language-html">&lt;head&gt;</code> of each page</li>
+        <li>Add a <code class="language-html">&lt;body&gt;</code> to each page</li>
+        <li>Add a <code class="language-html">&lt;nav&gt;</code>, <code class="language-html">&lt;main&gt;</code>, and
+          <code class="language-html">&lt;footer&gt;</code> to each page's <code
+            class="language-html">&lt;body&gt;</code>
+        </li>
+        <li>(Optional) Add some text, use <code class="language-html">&lt;p&gt;</code>, to each <code
+            class="language-html">&lt;main&gt;</code> on each page. We'll be changing this later.</li>
+      </ul>
+      <p class="note"><strong>Note:</strong> If you need help, refer to the previous labs or ask on GitHub Discussions!
+        Remember to stage and
+        commit your changes often along the way! </p>
 
 
     </div>
