--- a/lab_029.html
+++ b/lab_029.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 17 - Sections 
+    Lab  - Git
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="17">
+<body data-lab-id="">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,8 +37,8 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab 17</em>
-        Sections
+        <em>Lab </em>
+        Git
       </h1>
 
       <h2>Goals</h2>
@@ -58,4 +58,3 @@
 </body>
 
 </html>
-
