fix: renamed assets and prism refs

--- a/prism/html/1902.html
+++ b/prism/html/1902.html
@@ -4,14 +4,11 @@
     <title>Personal Website</title>
   </head>
   <body>
-    <nav>
-    </nav>
+    <nav></nav>
     <main>
       <p>Hello World! This is my website.</p>
       <p>This is a sentence.</p>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
   </body>
-  <footer></footer>
 </html>
